# ws-explo

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  b.sh  compose.yaml  tailwind.config.js
.cargo/: config.toml
app/: Cargo.toml
app/src/: lib.rs
app/src/calls/: check_auth.rs  client_active.rs  login.rs  mod.rs  publish.rs  register.rs
app/src/components/: account.rs  index.rs  login.rs  mod.rs  navbar.rs  publish.rs  register.rs
backend/: Cargo.toml
backend/src/: db.rs  errors.rs  main.rs  middle.rs
backend/src/handlers/: account.rs  check_auth.rs  client_active.rs  fallback.rs  handle_ccs.rs  loadjs.rs  login.rs  mod.rs  publish.rs  register.rs  root.rs  send.rs  wasm.rs  ws.rs
client/: Cargo.toml
client/src/: main.rs
docker-db/: README.md  docker-compose.yaml
docker-db/initFiles/: init.sql
frontend/: Cargo.toml
frontend/src/: lib.rs
views/: login.html  send.html
