[workspace]
members = [
	"frontend",
	"backend",
	"app",
	"client"
]
[workspace.dependencies]


[[workspace.metadata.leptos]]
name = "ws-explo"
bin-package ="backend"
lib-package = "frontend"
site-pkg-dir = "pkg"


site-addr = "localhost:5000"

reload-port = 5001


browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
