[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "8.3.0"
leptos = {version = "0.5",features=["csr","nightly"]}
leptos_router = {version = "0.5",features=["csr","nightly"]}
leptos_meta = {version = "0.5",features = ["csr"]}
serde = "1.0.188"
serde-wasm-bindgen = "0.5.0"
serde_json = "1.0.105"
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.66"

[dependencies.web-sys]
version = "0.3.64"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  "Storage",
]

