[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.20",features=["ws","headers"]}
serde = "1.0.188"
serde_json = "1.0.105"
tokio = {version ="1.32.0", features=["full"]}
uuid = "1.4.1"
sqlx = { version = "0.7", features = [ "runtime-tokio-native-tls" , "postgres" ] }
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
leptos_axum = "0.5"
leptos = "0.5"
