[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = {path = "../app"}
leptos = {version = "0.5",features=["csr","nightly"]}
wasm-bindgen = "0.2.88"
web-sys = "0.3.64"
